Created attachment 129063 [details] A table with its right border on page's border If a table has its border coinciding with page border, then hovering the mouse over the border changes its shape to "resize" (<->), but clicking and trying to drag the border does nothing. To reproduce: open the attached bugdoc and try to resize table's right border. Tested with: Version: 5.2.3.3 (x64) Build ID: d54a8868f08a7b39642414cf2c8ef2f228f780cf CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; Locale: en-US (ru_RU); Calc: group Version: 5.4.0.0.alpha0+ Build ID: b72a9307568c73c31441524ff0b1d6fec8e19842 CPU Threads: 4; OS Version: Windows 6.19; UI Render: GL; Locale: ru-RU (ru_RU); Calc: CL OOo 3.3.0
A patch has been posted for review: https://gerrit.libreoffice.org/31309
Mike Kaganski committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=764358a43b83cdae9269af47070e3cb4739c96c0 tdf#104215: Remove the out-of-borders ruler check It will be available in 5.4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Move it to NEW as there's already a fix for it
Hello, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?