tdf#104215: Remove the out-of-borders ruler check

It is not called for out-of-borders points anyway, unless
there is a table border on page border, in which case the cursor
shows that dragging should be possible.

Change-Id: If5cecbcd0799c74012c525588c0d2fce5d79ffd6
Reviewed-on: https://gerrit.libreoffice.org/31309
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 764358a43b83cdae9269af47070e3cb4739c96c0)