svtools/source/control/ruler.cxx
@@ -1515,7 +1515,6 @@ bool Ruler::ImplHitTest( const Point& rPos, RulerSelection* pHitTest,
 
     // test if outside
     nX -= mnVirOff;
-    long nXTemp = nX;
     if ( (nX < mpData->nRulVirOff - nXExtraOff) ||
          (nX > mpData->nRulVirOff + mpData->nRulWidth + nXExtraOff) ||
          (nY < 0) ||
@@ -1613,14 +1612,6 @@ bool Ruler::ImplHitTest( const Point& rPos, RulerSelection* pHitTest,
                 }
             }
         }
-    }
-
-    // everything left and right is outside and don't take this into account
-    if ( (nXTemp < mpData->nRulVirOff) || (nXTemp > mpData->nRulVirOff+mpData->nRulWidth) )
-    {
-        pHitTest->nPos = 0;
-        pHitTest->eType = RulerType::Outside;
-        return false;
     }
 
     // test the borders
